# healthcare-scheduling-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  HIPAA_COMPLIANCE.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  RESILIENCE.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  env.production.example  healthcare.db  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_healthcare.db  update_git_dates.py
.github/workflows/: ci.yml  production-deploy.yml
alembic/: env.py
alembic/versions/: acc6c4c40d22_init.py
app/: main.py
app/api/v1/: __init__.py  admin.py  advanced_appointments.py  appointments.py  auth.py  availability.py  health_checks.py  notifications.py  testing.py  users.py
app/core/: config.py  exceptions.py  logging.py  openapi.py  performance.py  production_config.py  rate_limit.py  security.py  validation.py  versioning.py
app/db/: base.py  init_db.py  models.py  notification_models.py  schemas.py
app/observability/: metrics.py
app/scripts/: __init__.py  seed.py
app/security/: __init__.py  access_control.py  audit.py  config.py  data_retention.py  encryption.py  headers.py  session.py  validation.py
app/services/: appointment_analytics.py  appointment_templates.py  appointments.py  availability.py  availability_optimization.py  conflict_resolution.py  engagement_analytics.py  notification_channels.py  notification_preferences.py  notification_scheduling.py  notification_templates.py  notifications.py  real_time_notifications.py  recurring_appointments.py  reminders.py  waitlist.py
app/tools/: __init__.py  api_monitor.py  api_tester.py  api_testing.py  sdk_generator.py
app/workers/: celery_app.py  tasks.py
architecture/: README.md  api-architecture.md  database-schema.md  deployment-architecture.md  system-architecture.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: healthcare-api.json
monitoring/grafana/datasources/: prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: healthcare-api.conf
scripts/: backup.py  deploy.sh
tests/: README.md  conftest.py
tests/e2e/: test_complete_workflows.py
tests/integration/api/: test_appointments.py  test_auth.py
tests/unit/core/: test_security.py
tests/unit/services/: test_appointments.py  test_availability.py
tests/utils/: assertions.py  test_data.py
